# parking-simulator

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.ninja  cmake_install.cmake
include/: ParkingFloor.h  README  vehicle.h
include/figure/: Circle.h  ColoredFigure.h  Figure.h  Line.h  Polygon.h  Quadrilateral.h  Rectangle.h  SemiCircle.h  Trajectory.h  Triangle.h
include/group/: Bicycle.h  Car.h  Group.h  Motorbike.h  Spacecraft.h  Teleporter.h  UFO.h  Van.h
include/management/: GroupManager.h  ParkingLot.h  PlotManager.h  SlotManager.h  TicketManager.h
include/math/: Vec.h
include/utils/: CommonValue.h  Logger.h  Utils.h
ipa/: CMakeLists.txt  Makefile  ipa.cpp
ipa/figure/: Circle.cpp  ColoredFigure.cpp  Figure.cpp  Line.cpp  Polygon.cpp  Quadrilateral.cpp  Rectangle.cpp  SemiCircle.cpp  Trajectory.cpp  Triangle.cpp
ipa/group/: Car.cpp  Group.cpp  Spacecraft.cpp  Teleporter.cpp  UFO.cpp
ipa/management/: GroupManager.cpp  ParkingLot.cpp  PlotManager.cpp  SlotManager.cpp
ipa/test/: test.cpp
pms/: CMakeLists.txt  Makefile  pms.cpp
pms/group/: Bicycle.cpp  Car.cpp  Group.cpp  Motorbike.cpp  Van.cpp
pms/management/: GroupManager.cpp  ParkingLot.cpp  SlotManager.cpp  TicketManager.cpp
pms/math/: Vec.cpp
pms/test/: test.cpp
pms/utils/: CommonValue.cpp  Logger.cpp  Utils.cpp
